@@ -28,7 +28,6 @@ import javax.persistence.NoResultException;
 import javax.persistence.Query;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class MatchMakingRatingDAO {
 	public static MatchMakingRating getMMR(String id) {
@@ -105,7 +104,7 @@ public class MatchMakingRatingDAO {
 		try {
 			return (List<MatchMakingRating>) q.getResultStream()
 					.filter(r -> ((MatchMakingRating) r).getTier().getTier() == tier)
-					.collect(Collectors.toList());
+					.toList();
 		} catch (NoResultException e) {
 			return new ArrayList<>();
 		} finally {
