@@ -34,7 +34,6 @@ import org.quartz.JobExecutionContext;
 
 import java.util.Calendar;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class DailyEvent implements Job {
 	public static JobDetail daily;
@@ -87,7 +86,7 @@ public class DailyEvent implements Job {
 		} else {
 			List<MatchMakingRating> mmrs = MatchMakingRatingDAO.getMMRRank().stream()
 					.filter(mmr -> mmr.getTier().getTier() >= RankedTier.ADEPT_IV.getTier())
-					.collect(Collectors.toList());
+					.toList();
 
 			for (MatchMakingRating mmr : mmrs) {
 				mmr.applyInactivityPenalty();
