@@ -42,7 +42,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.*;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Hand {
@@ -98,7 +97,7 @@ public class Hand {
 		deque.addAll(
 				Stream.of(champs, equips, fields)
 						.flatMap(List::stream)
-						.collect(Collectors.toList())
+						.toList()
 		);
 
 		int baseHp;
@@ -359,7 +358,7 @@ public class Hand {
 	}
 
 	public void redrawHand() {
-		List<Drawable> notUsed = cards.stream().filter(Drawable::isAvailable).collect(Collectors.toList());
+		List<Drawable> notUsed = cards.stream().filter(Drawable::isAvailable).toList();
 		deque.addAll(notUsed);
 		cards.removeIf(Drawable::isAvailable);
 
@@ -415,7 +414,7 @@ public class Hand {
 				.sorted(Comparator.comparingInt(Champion::getMana)
 						.thenComparing(Champion::getAtk)
 						.thenComparing(Champion::getDef)
-				).collect(Collectors.toList());
+				).toList();
 	}
 
 	public List<Equipment> getSortedEquipments() {
@@ -425,13 +424,13 @@ public class Hand {
 				.sorted(Comparator.comparingInt(Equipment::getMana)
 						.thenComparing(Equipment::getAtk)
 						.thenComparing(Equipment::getDef)
-				).collect(Collectors.toList());
+				).toList();
 	}
 
 	public List<Drawable> getAvailableCards() {
 		return getCards().stream()
 				.filter(Drawable::isAvailable)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public void removeCard(String name) {
