@@ -31,7 +31,6 @@ import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.TextChannel;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public enum GemItem {
 	CONVERT_CREDITS(
@@ -104,7 +103,7 @@ public enum GemItem {
 				List<Card> cards = CardDAO.getCards()
 						.stream()
 						.filter(cd -> !kp.getCards().contains(new KawaiponCard(cd, foil)))
-						.collect(Collectors.toList());
+						.toList();
 
 				Card chosen = cards.get(Helper.rng(cards.size(), true));
 
